# coinalyze

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml  publish_to_test.yml  test.yml
examples/: cli.py  coinalyze_client.ipynb
scripts/: test
src/coinalyze/: __init__.py  client.py  constants.py  enums.py
src/coinalyze/util/: base.py  pandas.py
