[project]
name = "coinalyze"
version = "0.1.0"
description = "Coinalyze API client"
readme = "README.md"
authors = [
    { name = "ivarurdalen", email = "ivar.urdalen@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx",
    "httpx-retries",
    "pyrate-limiter",
]

[project.optional-dependencies]
pandas = [
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coinalyze"]

[dependency-groups]
dev = [
    "environs",
    "ipykernel",
    "mypy",
    "pre-commit",
    "pylint",
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = [
    "E501",   # line-too-long
    "D100",   # missing-docstring-in-public-module
    "D101",   # missing-docstring-in-public-class
    "D104",   # missing-docstring-in-public-package
    "D105",   # missing-docstring-in-magic-method
    "D107",   # missing-docstring-in-init
    "D212",   # multi-line-summary-first-line
]
select = [
    "ARG001",  # unused-function-argument
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "E",       # pycodestyle-error
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade
    "W",       # pycodestyle-warning
    "D",       # pydocstyle
]
extend-select = ["D213"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # unused-import
    "F403", # unused-wildcard-import
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 20
max-statements = 60

[tool.pylint."MESSAGES CONTROL"]
disable = [
    # Rules handled by ruff
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
    "line-too-long",
    "unused-import",
    "too-many-arguments",
    "too-many-branches",
    "too-many-positional-arguments",
]
enable = "useless-suppression"
